--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18"/>
+                     android:maxSdkVersion="18"/>
+    <uses-permission android:name="android.permission.CAMERA"
+                     android:required="false"/>
 
     <application
         android:allowBackup="true"
